# DevNet

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
BM_2Sphere/: run.py
BM_2Sphere/configs/: train_lstm.yaml
CIFAR10/: run.py
development/: gl.py  he.py  nn.py  param.py  se.py  so.py
harmonic/: ItalyPowerDemand.ipynb  MC_O3.ipynb  README.md  WalkingSittingStanding.ipynb  example_plots.ipynb  grid_search.py  pdev_ItalyPowerDemand  peterweyl_MC.ipynb  simulate_paths.ipynb
harmonic/logs/: grid_search_results.csv
harmonic/models/: attention_development.py
harmonic/src/: helpers.py  training.py
models/: attention_development.py
src/development/: expm.py  gl.py  go.py  he.py  hyperbolic.py  param.py  sp.py  unitary.py
test/: test_gl.ipynb
