[project]
name = "devnet"
version = "0.1.0+118"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.0"

dependencies = [
    "matplotlib>=3.9.3",
    "ml-collections>=0.1.1",
    "numpy<2.0.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "signatory==1.2.6.1.9.0",
    "torch>=1.9.0",
    "torchaudio",
    "tqdm>=4.67.1",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["development", "development.*"]

[tool.uv.sources]
torch = { index = "pytorch", marker = "platform_system == 'Windows'"}

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

